syntax = "proto3";
package tx_automator_configpb;

message Config{
    uint32 port = 1;
    uint32 tps = 2;
    uint32 scFreq = 3;
    string password = 4;
    uint32 maxAccount = 5;
    uint64 initialAmount = 6;
}